discussion/kv_engine/183265/183265_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-: Drop ModifyCollection events

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-25 16:01:14.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 16:01:39.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326458/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 16:49:32.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/585/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/585/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/562/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/562/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/743/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/743/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/841/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-25T16:20:42.550Z] (32 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/841/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/585/ : FAILURE

Compile error at [2022-11-25T16:03:56.683Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/585/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/604/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3221 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-25T16:19:10.734Z] (23 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/604/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/604/ )

Test exceeded the timeout:
[2022-11-25T16:19:10.734Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/604/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/594/ : FAILURE

Compile error at [2022-11-25T16:19:26.347Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/594/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/594/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-25T16:24:27.717Z] (116 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/594/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/594/ )

Test exceeded the timeout:
[2022-11-25T16:24:27.717Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/594/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/604/ : FAILURE

Compile error at [2022-11-25T16:22:23.576Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/604/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21424/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/577/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
